--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <title>Welkom | Workshop HTML en CSS</title>
   </head>
   <body>
-    <h1>Welkom</h1>
-    <p>
-      Hallo en welkom op de workshop: ‘Bouw je eigen website met HTML &amp;
-      CSS’.
+    <h1>Hallo</h1>
+    <p>jo
     </p>
   </body>
 </html>
+<style>
+h2
+color
+</style>
+<picture>image.png</picture>
